# Inf-CLIP

./: .gitignore  README.md  convert-openai-clip-to-gmp.py  pyproject.toml  requirements.txt
datasets/: benchmarks.txt  benchmarks_download.sh
gmpclip/: model.py
inf_cl/: README.md  __init__.py  flash.py  pretrained.py  ring.py
inf_cl/model_configs/: LiT-B-16.json  LiT-B-32.json
inf_cl/models/: coca_arch.py  hf_model.py  lit_arch.py  modified_resnet.py  transform.py  transformer.py
inf_cl_train/: params.py  utils.py
inf_clip/: __init__.py  factory.py  openai.py
inf_clip/model_configs/: LiT-L-16.json
inf_clip/models/: clip_arch.py  loss.py  timm_model.py  transformer.py
inf_clip/models/ops/: flash.py  ring.py
inf_clip/train/: data.py  engine.py  main.py  params.py
inf_clip_train/: main.py  optims.py  train.py
scripts/: benchmarks_eval.sh  imagenet_eval.sh
scripts/cc12m/: clip_vit-b-32_bs32k.sh  lit_vit-b-16_bs32k.sh  lit_vit-b-32_bs32k.sh
scripts/cc3m/: clip_r50_bs4k.sh  clip_vit-b-32_bs16k.sh  lit_vit-b-32_bs16k.sh
scripts/laion400m/: clip_vit-b-32_bs256k.sh  lit_vit-b-16_bs256k.sh  lit_vit-b-32_bs256k.sh  lit_vit-l-16_bs256k.sh
tests/: example.py
